--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
+*{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+a{
+    cursor: pointer;
+}
 .navbar-toggler{
     padding: 1vw!important;
     background-color: black!important;
     border-radius: 50%!important;
+    z-index: 100;
 }
 nav{
     position: fixed!important;
     right: 0!important;
     background: transparent !important;
+    z-index: 100;
+    right: 1vw !important;
+    top: 1vw;
+    cursor: pointer;
 }
 .fa-linkedin{
 color: white;
@@ -18,9 +29,16 @@ padding: 1vw;
 .bg-dark{
     background-color: #040b14!important;
 }
-.menu-all ul{
-    list-style: none;
+.main-content #about ul{
+    padding: 0!important;
+}
+.menu-all{
+    padding: 1rem!important;
+}
+.menu-all li{
+    list-style: none!important;
     color: #a8a9b4;
+    padding: 2vw 0;
 }
 .menu-all a{
     color: #a8a9b4;
@@ -29,7 +47,6 @@ padding: 1vw;
 .main-content{
 position: absolute;
 top: 1vw;
-left: 25%;
 }
 #navbarToggleExternalContent>div{
     height: 100vh;
@@ -54,10 +71,60 @@ left: 25%;
 }
 .project-details{
     height: 200px;
-    background-color: darkgray;
+    background-color: rgb(75, 167, 220);
+    color: white;
     scale: .9;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    border-radius: 3px;
+}
+.project-details-white{
+    background-color: white;
+    border: 1px solid rgb(75, 167, 220);
+    color: rgb(75, 167, 220);
+}
+.project-details a{
+    color: white;
+    font-size: 20px;
+}
+.project-details-white a{
+    color: rgb(75, 167, 220);
+}
+.full-width {
+  width: 95% !important;
+  /* left: 0; */
+  margin: auto!important;
+  position: relative;
+}
+.half-width{
+    position: absolute;
+    width: 65%!important;
+    right: 0;
+}
+.offcanvas-backdrop.show {
+    opacity: 0;
+}
+.offcanvas{
+    width: 30%!important;
+}
+.backend-projects p{
+    color: #494a4b;
+    font-size: 14px;
+    padding: 1vw;
+}
+#skills li{
+    list-style: none;
+}
+.Certification{
+    color: #494a4b;
+    font-weight: 700;
+}
+@media screen and (max-width: 600px) {
+    .half-width{
+          width: 95% !important;
+  position: relative;
+    }
 }
